# colliving_cash

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 4dc6e454f9b7_create_main_tables.py  66ec7ae2eb74_initial_migration.py
app/: main.py
app/application/api/: main.py
app/config/: ioc.py  settings.py
app/config/providers/: __init__.py  base_provider.py  database.py  sql_repository.py
app/core/providers/: base_provider.py  database.py  sql_repository.py
app/dependencies/: ioc.py
app/dependencies/providers/: __init__.py  base_provider.py  database.py  sql_repository.py
app/domain/: exc.py
app/domain/entities/: colliving.py
app/domain/events/: base.py
app/domain/interfaces/: message_broker.py
app/domain/logic/: mediator.py
app/gateways/datamappers/: house_datamapper.py  resident_datamapper.py  room_datamapper.py  user_datamapper.py
app/gateways/message_brokers/: converters.py  kafka.py
app/gateways/models/: colliving.py
app/logic/: mediator.py
app/logic/commands/: colliving.py
app/logic/exceptions/: colliving.py
app/logic/interfaces/: repository.py
app/presentation/api/: lifespan.py  main.py
app/tests/: conftest.py  fixtures.py
app/tests/logic/: test_colliving.py
docker_compose/: app.yaml  storages.yaml
src/: main.py
src/application/api/: main.py
src/domain/: entity.py  exc.py
src/domain/entities/: base.py  colliving.py
src/logic/: init.py  mediator.py
src/logic/commands/: base.py  colliving.py
src/tests/: conftest.py  fixtures.py
(+49 files in other folders)
